# wizardfall

./: Cargo.toml  README.md  TODO.md
client/: Cargo.toml
client/src/: animation.rs  level.rs  main.rs  player.rs  ui.rs
derive/: Cargo.toml
derive/src/: lib.rs  network_state.rs
levels/: Typical_TopDown_example.ldtk  test
levels/Typical_TopDown_example/: 0000-First.ldtkl  0000-Simple.ldtkl  0001-East_section.ldtkl
levels/Typical_TopDown_example/backups/: Typical_TopDown_example___2021-02-06__18-41-24__crash.backup.ldtk
server/: Cargo.toml
server/src/: lib.rs  main.rs
shared/: Cargo.toml
shared/src/: animation.rs  ldtk.rs  lib.rs  math.rs  message.rs  network.rs  physics.rs  player.rs  projectile.rs  timer.rs
