[package]
name = "client"
version = "0.1.0"
authors = ["Lucas Poffo <ltkpoffo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package.'*']
opt-level = 3

[dependencies]
macroquad = { git = "https://github.com/not-fl3/macroquad.git", features = [ "log-impl" ] }
renet = { path = "../../renet" }
shared = { path = "../shared" }
bincode = "1.3.1"
log = "0.4.11"
alto_logger = "0.3.6"
shipyard = { git = "https://github.com/leudz/shipyard.git", version = "0.4.1", features = [ "serde1" ] }
ldtk_rust = "0.3.0"
server = { path = "../server" }
