[package]
name = "server"
version = "0.1.0"
authors = ["Lucas Poffo <ltkpoffo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
renet = { path = "../../renet" }
shared = { path = "../shared" }
bincode = "1.3.1"
log = "0.4.11"
alto_logger = "0.3.6"
glam = { version = "0.10", features = [ "serde" ] }
shipyard = { git = "https://github.com/leudz/shipyard.git", version = "0.4.1", features = [ "serde1" ] }
# TODO: remove this and use only miniquad as an debug feature.
eframe = "0.9.0"
