[package]
name = "shared"
version = "0.1.0"
authors = ["Lucas Poffo <ltkpoffo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
renet = { path = "../../renet" }
derive = { path = "../derive" }
macroquad = { version = "=0.3.0-alpha.14", features = [ "log-impl" ] }
serde = "1"
glam = { version = "0.10", features = [ "serde" ] }
shipyard = { git = "https://github.com/leudz/shipyard.git", version = "0.4.1", features = [ "serde1" ] }
ldtk_rust = "0.3.0"
shipyard_rapier2d = { path = "../../shipyard_rapier/shipyard_rapier2d" }
