[package]
name = "shared"
version = "0.1.0"
authors = ["Lucas Poffo <ltkpoffo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package.'*']
opt-level = 3

[dependencies]
derive = { path = "../derive" }
macroquad = "0.3.13"
# renet_udp = { path = "../../renet/renet_udp" }
renet_udp = "0.0.2"
serde = "1"
glam = { version = "0.14", features = [ "serde" ] }
shipyard = { git = "https://github.com/leudz/shipyard.git", version = "0.4.1", features = [ "serde1" ] }
ldtk_rust = "0.3.0"
